{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 362,
  "lineage": "d7601662-0d03-83fc-9621-76131d3994e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09cfd3589efc5e5d0",
            "association_id": "eipassoc-06e72480b5c8ed0ba",
            "domain": "vpc",
            "id": "eipalloc-09cfd3589efc5e5d0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f332b10b299a111a",
            "private_dns": "ip-10-8-1-200.ec2.internal",
            "private_ip": "10.8.1.200",
            "public_dns": "ec2-100-25-125-39.compute-1.amazonaws.com",
            "public_ip": "100.25.125.39",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0359ba06511359b70",
            "associate_with_private_ip": "10.8.1.50",
            "association_id": "eipassoc-0dedaf441bedf79f7",
            "domain": "vpc",
            "id": "eipalloc-0359ba06511359b70",
            "instance": "i-0e46ec834fc37c406",
            "network_border_group": "us-east-1",
            "network_interface": "eni-093b9ac5a013c7b1e",
            "private_dns": "ip-10-8-1-50.ec2.internal",
            "private_ip": "10.8.1.50",
            "public_dns": "ec2-44-219-181-67.compute-1.amazonaws.com",
            "public_ip": "44.219.181.67",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.public_server",
            "aws_security_group.public",
            "aws_subnet.public_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:038528481894:instance/i-0eb773c0e2ac45703",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb773c0e2ac45703",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terryhsu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d7b3ea853bc9eeff"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d7b3ea853bc9eeff",
            "private_dns": "ip-10-8-2-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.8.2.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ae89ab334122de67",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0364d0593f82c25",
            "tags": {
              "Name": "terry-test-private"
            },
            "tags_all": {
              "Name": "terry-test-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f14201ca85410cb4"
            ]
          },
          "dependencies": [
            "aws_network_interface.private_server",
            "aws_security_group.private",
            "aws_subnet.private_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:038528481894:instance/i-0e46ec834fc37c406",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e46ec834fc37c406",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terryhsu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-093b9ac5a013c7b1e"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-093b9ac5a013c7b1e",
            "private_dns": "ip-10-8-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.8.1.50",
            "public_ip": "44.219.181.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bee1036ae98a873c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b89dc16d7930bbb",
            "tags": {
              "Name": "terry-test-public"
            },
            "tags_all": {
              "Name": "terry-test-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a65b1e55158d889"
            ]
          },
          "dependencies": [
            "aws_network_interface.public_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:internet-gateway/igw-053661a02f8b319ac",
            "id": "igw-053661a02f8b319ac",
            "owner_id": "038528481894",
            "tags": {
              "Name": "terry-main"
            },
            "tags_all": {
              "Name": "terry-main"
            },
            "vpc_id": "vpc-0d77f39a0db28a00d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09cfd3589efc5e5d0",
            "association_id": "eipassoc-06e72480b5c8ed0ba",
            "connectivity_type": "public",
            "id": "nat-03a8c3d816e76b537",
            "network_interface_id": "eni-0f332b10b299a111a",
            "private_ip": "10.8.1.200",
            "public_ip": "100.25.125.39",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b89dc16d7930bbb",
            "tags": {
              "Name": "terry-nat-gateway"
            },
            "tags_all": {
              "Name": "terry-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:network-acl/acl-09817d7413f533d63",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "id": "acl-09817d7413f533d63",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "038528481894",
            "subnet_ids": [
              "subnet-08b89dc16d7930bbb"
            ],
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0d77f39a0db28a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:network-interface/eni-0d7b3ea853bc9eeff",
            "attachment": [
              {
                "attachment_id": "eni-attach-00cc1bdea56339d28",
                "device_index": 0,
                "instance": "i-0eb773c0e2ac45703"
              }
            ],
            "id": "eni-0d7b3ea853bc9eeff",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:72:d7:32:de:33",
            "owner_id": "038528481894",
            "private_ip": "10.8.2.50",
            "private_ip_list": [
              "10.8.2.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.8.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f14201ca85410cb4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0364d0593f82c25"
          },
          "dependencies": [
            "aws_security_group.private",
            "aws_subnet.private_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:network-interface/eni-093b9ac5a013c7b1e",
            "attachment": [
              {
                "attachment_id": "eni-attach-050fc2407fc9042a6",
                "device_index": 0,
                "instance": "i-0e46ec834fc37c406"
              }
            ],
            "id": "eni-093b9ac5a013c7b1e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:62:89:8a:55:2f",
            "owner_id": "038528481894",
            "private_ip": "10.8.1.50",
            "private_ip_list": [
              "10.8.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.8.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04a65b1e55158d889"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b89dc16d7930bbb"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:route-table/rtb-074b9bfd0249e678a",
            "id": "rtb-074b9bfd0249e678a",
            "owner_id": "038528481894",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03a8c3d816e76b537",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terry-private-route-table"
            },
            "tags_all": {
              "Name": "terry-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d77f39a0db28a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:route-table/rtb-05da82fe10f5d6876",
            "id": "rtb-05da82fe10f5d6876",
            "owner_id": "038528481894",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053661a02f8b319ac",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053661a02f8b319ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terry-public-route-table"
            },
            "tags_all": {
              "Name": "terry-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d77f39a0db28a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be620ea26fa4e4c3",
            "route_table_id": "rtb-05da82fe10f5d6876",
            "subnet_id": "subnet-08b89dc16d7930bbb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd82b7a7ee8aa60c",
            "route_table_id": "rtb-074b9bfd0249e678a",
            "subnet_id": "subnet-0d0364d0593f82c25"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.public_subnet",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:security-group/sg-0f14201ca85410cb4",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f14201ca85410cb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terry-sg-private",
            "name_prefix": "",
            "owner_id": "038528481894",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d77f39a0db28a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:security-group/sg-04a65b1e55158d889",
            "description": "Allow ssh traffic and web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a65b1e55158d889",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terry-sg-public",
            "name_prefix": "",
            "owner_id": "038528481894",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d77f39a0db28a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:subnet/subnet-0d0364d0593f82c25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.8.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0364d0593f82c25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038528481894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terry-private-subnet"
            },
            "tags_all": {
              "Name": "terry-private-subnet"
            },
            "vpc_id": "vpc-0d77f39a0db28a00d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:subnet/subnet-08b89dc16d7930bbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.8.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b89dc16d7930bbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038528481894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terry-public-subnet"
            },
            "tags_all": {
              "Name": "terry-public-subnet"
            },
            "vpc_id": "vpc-0d77f39a0db28a00d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:vpc/vpc-0d77f39a0db28a00d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.8.0.0/16",
            "default_network_acl_id": "acl-0ff19ab459add9573",
            "default_route_table_id": "rtb-0ac9d84c76abb7025",
            "default_security_group_id": "sg-03180c7154e778738",
            "dhcp_options_id": "dopt-f39d368a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d77f39a0db28a00d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac9d84c76abb7025",
            "owner_id": "038528481894",
            "tags": {
              "Name": "terry-test-networking"
            },
            "tags_all": {
              "Name": "terry-test-networking"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038528481894:vpc-endpoint/vpce-0b0e34c9a46912f87",
            "auto_accept": true,
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-0b0e34c9a46912f87",
            "owner_id": "038528481894",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-05da82fe10f5d6876"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "terry-vpc-endpoint"
            },
            "tags_all": {
              "Name": "terry-vpc-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d77f39a0db28a00d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}